# whatsapp-desktop

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  flake.nix
src/: app.rs  controller.rs  main.rs  model.rs  test_svg_wrapper.rs  view.rs
src/core/: types.rs
src/model/: cache.rs  chat.rs  connection.rs  state.rs
src/model/state/: chat_manager.rs  message_manager.rs  sync_manager.rs  typing_manager.rs
src/rpc/: client.rs  mod.rs  service.rs  types.rs
src/ui/: chat.rs  mod.rs  sidebar.rs  views.rs
src/view/: chat.rs  loading.rs  main_view.rs  pairing.rs  settings.rs  sidebar.rs
src/whatsapp/: client.rs  events.rs  mod.rs  storage.rs  types.rs
src/whatsapp/storage/: models.rs  queries.rs  schema.rs  writer.rs
